--- a/config/immortalwrt-master/config
+++ b/config/immortalwrt-master/config
@@ -2,6 +2,7 @@
 # Automatically generated file; DO NOT EDIT.
 # ImmortalWrt Configuration
 #
+CONFIG_PACKAGE_luci-app-nikki=y
 CONFIG_MODULES=y
 CONFIG_HAVE_DOT_CONFIG=y
 CONFIG_HOST_OS_LINUX=y
